@@ -142,8 +142,6 @@ automatically by the Isabelle build process.</li>
 
       <tr><td>sub</td>            <td><tt>=_</tt></td>          <td>⇩</td></tr>
       <tr><td>sup</td>            <td><tt>=^</tt></td>          <td>⇧</td></tr>
-      <tr><td>isup</td>           <td><tt>-_</tt></td>          <td>⇣</td></tr>
-      <tr><td>isub</td>           <td><tt>-^</tt></td>          <td>⇡</td></tr>
       <tr><td>bold</td>           <td><tt>-.</tt></td>          <td>❙</td></tr>
 
     </table>
