@@ -188,8 +188,8 @@ isabelle-symbols.dock-position=bottom
 isabelle-theories.dock-position=right
 isabelle.control-bold.label=Control bold
 isabelle.control-bold.shortcut=C+e RIGHT
-isabelle.control-isub.label=Control subscript
-isabelle.control-isub.shortcut=C+e DOWN
+isabelle.control-sub.label=Control subscript
+isabelle.control-sub.shortcut=C+e DOWN
 isabelle.control-reset.label=Control reset
 isabelle.control-reset.shortcut=C+e LEFT
 isabelle.control-sup.label=Control superscript
